src/app/components/@shared/footer/Footer.module.scss
@use '@/styles/abstracts/core' as *;

.footer {
  background-color: $giveMeYellow;
  display: flex;
  justify-content: center;
}

.footerContents {
  color: $giveMeNavy;
  // padding: 32px 104px 64px;
  padding: 32px 24px 64px;
  display: flex;
  justify-content: space-between;

  flex-wrap: wrap;
  max-width: 1200px;
  width: 100%;

  @include mobile {
    // 예약 컴포넌트가 화면 하단에 붙어있어야 하므로 그만큼 마진 추가
    // 레퍼런스: 무신사 모바일 화면
    margin-bottom: $mobileReservationHeight;
  }

  // 하단 고정
  // position: fixed;
  // left: 0;
  // right: 0;
  // bottom: 0;
  @include textLgRegular;

  @media (max-width: 743px) {
    padding: 32px 39px 66px;
    gap: 24px;
    justify-content: center;
  }
}

.footerMiddleSection {
  display: flex;
  gap: 30px;
}

.footerSocialSection {
  display: flex;
  gap: 12px;
}

.footerIcon {
  width: 20px;
  height: 20px;
}

